N2SkyC/vinnsl-storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9779"
  labels:
    testProject: vinnsl-storage-service
    app: vinnsl-storage-service
  name: vinnsl-storage-service
  namespace: vinnsl
spec:
  ports:
  - name: sunproxyadmin
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: vinnsl-storage-service
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    testProject: vinnsl-storage-service
    app: vinnsl-storage-service
  name: vinnsl-storage-service
  namespace: vinnsl
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: vinnsl-storage-service
  template:
    metadata:
      labels:
        testProject: vinnsl-storage-service
        app: vinnsl-storage-service
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: a0144/fed-vinnsl-storage-service:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 100m
        name: spring-boot
        ports:
        - containerPort: 8081
          name: sunproxyadmin
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
